<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        app:navigationIconTint="?attr/colorOnPrimary"
        app:titleTextColor="?attr/colorOnPrimary" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Fill style for M3 CardView
            https://github.com/material-components/material-components-android/blob/master/docs/components/Card.md#elevated-card
            -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardViewPhoto"
                style="?attr/materialCardViewFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/preview_image"
                        android:scaleType="fitCenter" />


                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/about_photo"
                        android:textAppearance="?attr/textAppearanceTitleMedium"
                        android:textColor="?attr/colorOnSurface" />


                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textViewDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?attr/colorOnSurface" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textViewDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?attr/colorOnSurface" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:orientation="horizontal">

                        <com.google.android.flexbox.FlexboxLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            app:flexDirection="column">

                            <com.google.android.material.textview.MaterialTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:text="@string/camera"
                                android:textAppearance="?attr/textAppearanceBodyMedium"
                                android:textSize="14sp" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/textViewCamera"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?attr/textAppearanceBody2"
                                android:textSize="14sp" />

                            <com.google.android.material.textview.MaterialTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:text="@string/iso"
                                android:textAppearance="?attr/textAppearanceBodyMedium"
                                android:textSize="14sp" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/textViewISO"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?attr/textAppearanceBody2"
                                android:textSize="14sp" />

                            <com.google.android.material.textview.MaterialTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:text="@string/aperture"
                                android:textAppearance="?attr/textAppearanceBodyMedium"
                                android:textSize="14sp" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/textViewAperture"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?attr/textAppearanceBody2"
                                android:textSize="14sp" />


                        </com.google.android.flexbox.FlexboxLayout>

                        <com.google.android.flexbox.FlexboxLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            app:flexDirection="column">


                            <com.google.android.material.textview.MaterialTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:text="@string/focal_length"
                                android:textAppearance="?attr/textAppearanceBodyMedium" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/textViewFocalLength"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?attr/textAppearanceBody2" />

                            <com.google.android.material.textview.MaterialTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:text="@string/resolution"
                                android:textAppearance="?attr/textAppearanceBodyMedium" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/textViewResolution"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?attr/textAppearanceBody2" />

                            <com.google.android.material.textview.MaterialTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:text="@string/exposure"
                                android:textAppearance="?attr/textAppearanceBodyMedium" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/textViewShutterSpeed"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?attr/textAppearanceBody2" />

                        </com.google.android.flexbox.FlexboxLayout>

                    </LinearLayout>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>


            <LinearLayout
                android:id="@+id/wallpaper_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardViewPhoto">

                <Button
                    android:id="@+id/download_photo"
                    style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/download"
                    app:icon="@android:drawable/ic_menu_save" />

                <Button
                    android:id="@+id/set_wallpaper"
                    style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/set_wallpaper"
                    app:icon="@android:drawable/ic_menu_set_as" />

                <Button
                    android:id="@+id/share_photo"
                    style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:icon="@android:drawable/ic_menu_share" />


            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/second_card_view"
                style="?attr/materialCardViewFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/wallpaper_linear_layout">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/about_user"
                        android:textAppearance="?attr/textAppearanceTitleMedium"
                        android:textColor="?attr/colorOnSurface" />


                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textViewName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:textAppearance="?attr/textAppearanceBody1"
                        android:textColor="?attr/colorOnSurface" />


                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textViewLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?attr/colorOnSurface" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
